Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesH.wiki
+++ b/wiki/PlanningAuthoritiesH.wiki
@@ -20,7 +20,7 @@
 || Done || High Peak Borough Council || Glossop || ApplicationSearchServlet || http://planning.highpeak.gov.uk/portal/servlets/ApplicationSearchServlet ||
 ||  || Highland Council || Dingwall, Dornoch, etc || weekly lists as pdf || http://www.highland.gov.uk/yourenvironment/planning/planningapplicationsandbuildingwarrants/weekly-planning-bw-lists.htm ||
 ||  || Hillingdon Borough Council || Uxbridge || searchable by date || http://www.hillingdon.gov.uk/environment/planning/search/index.php?portal=as&height=768 ||
-|| In progress || Hinckley & Bosworth Borough Council || Hinckley || PublicAccess with https || https://cx.hinckley-bosworth.gov.uk/PublicAccess/dc/dc_home.aspx ||
+|| Ready || Hinckley and Bosworth Borough Council || Hinckley || PublicAccess using https || https://cx.hinckley-bosworth.gov.uk/PublicAccess/dc/dc_home.aspx ||
 || Done || Horsham District Council || Horsham || PublicAccess || http://publicaccess.horsham.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 ||  || London Borough of Hounslow || Hounslow || searchable by date || http://planning.hounslow.gov.uk/planningv2/planning_search.aspx ||
 || Done || Huntingdonshire District Council || Huntingdon || PublicAccess || http://planning.huntsdc.gov.uk/publicaccess/tdc/tdc_home.aspx ||
