--- a/wiki/PlanningAuthoritiesL.wiki
+++ b/wiki/PlanningAuthoritiesL.wiki
@@ -10,4 +10,4 @@
 ||  || Lincoln City Council || Lincoln || planningonline, searchable by date || http://online.lincoln.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 ||  || Lincolnshire County Council || Lincoln || searchable by date || http://apps1.lincolnshire.gov.uk/ePlanning/searchPageLoad.do ||
 ||  || Liverpool City Council || Liverpool || planningexplorer || http://www.liverpool.gov.uk/environment/planning/mvm_explorer.asp ||
-|| Done  ||Luton Borough Council || Luton || PublicAccess ||  http://www.eplan.luton.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
+|| Ready  ||Luton Borough Council || Luton || PublicAccess ||  http://www.eplan.luton.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
