--- a/wiki/PlanningAuthoritiesS.wiki
+++ b/wiki/PlanningAuthoritiesS.wiki
@@ -11,7 +11,7 @@
 || Done || Sheffield City Council || Sheffield || PublicAccess || http://planning.sheffield.gov.uk/publicaccess/default.aspx ||
 || || Shepway District Council || Folkestone || ukplanning - searchable by date. also html weekly list|| http://www.ukplanning.com/ukp/custom/forwards/selectandsearch.jsp?council=Shepway%20District%20Council&fwd=search,   http://www.shepway.gov.uk/webapp/service/query/planning-week.do?go=on ||
 || || Shetland Islands Council || Lerwick || list as html, can show last 2 weeks, month, etc || http://www.shetland.gov.uk/planningcontrol/apps/ ||
-|| || Shrewsbury & Atcham Borough Council || Shrewsbury || html list, searchable by date || http://www.shrewsbury.gov.uk/planninglist/register.asp ||
+|| || Shrewsbury & Atcham Borough Council || Shrewsbury || PlanningExplorer || http://www2.shrewsbury.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 || || Shropshire County Council || Shrewsbury || searchable by date (minerals and waste only) || http://193.132.103.54/PlanAppSrch.asp ||
 || || Slough Borough Council || Slough || requires registration! || http://www2.slough.gov.uk/swiftlg/apas/run/wchvarylogin.display ||
 || || Snowdonia National Park Authority || Penrhynduedraeth || searchable by date || http://www.eryri-npa.co.uk/swiftlg_test/apas_test/run/wphappcriteria.display ||
