--- a/wiki/PlanningAuthoritiesM.wiki
+++ b/wiki/PlanningAuthoritiesM.wiki
@@ -8,7 +8,7 @@
 ||  || Melton Borough Council || Melton Mowbray || searchable by date || http://www.meltononline.co.uk/planning/searchparam.asp ||
 ||  || Mendip District Council || Shepton Mallet || searchable by date || http://www.mendip.gov.uk/pods/ApplicationSearch.asp ||
 ||  || Merthyr Tydfil County Council || Merthyr Tydfil || weekly lists as pdf || http://www.merthyr.gov.uk/Home/Local+Services/Planning/Development+Control/Weekly+List/April+2007.htm ||
-||  || Merton Borough Council || Morden || site is down || http://planning.merton.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
+||  || Merton Borough Council || Morden || PlanningExplorer - site is down || http://planning.merton.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 ||  || Mid Bedfordshire District Council || Biggleswade || there is an acolnet here, but it is password protected, and only available to invited consultees! Also weekly lists of pdfs ||  http://www.midbeds.gov.uk/services/planning/planning_apps/Weekly_List_of_Planning_Applications.asp ||
 ||  || Mid Devon District Council || Tiverton || PublicAccess || http://planning.middevon.gov.uk/publicaccess/ ||
 ||  || Mid Suffolk District Council || Needham Market || acolnet, but locations have no postcode || http://www.midsuffolkdc.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
