Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesL.wiki
+++ b/wiki/PlanningAuthoritiesL.wiki
@@ -7,7 +7,7 @@
 || || Lewes District Council || Lewes || pdf and word weekly lists, but they are working on better || http://www.lewes.gov.uk/environment/778.asp ||
 || Ready || Lewisham Borough Council || Catford || acolnet || http://acolnet.lewisham.gov.uk/lewis-xslpagesdc/acolnetcgi.exe?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
 ||  || Lichfield District Council || Lichfield || no useful search, html list of the last week, and previous such lists || http://www.lichfielddc.gov.uk/site/scripts/planning.php ||
-||  || Lincoln City Council || Lincoln || planningonline, searchable by date || http://online.lincoln.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
+||  || Lincoln City Council || Lincoln || PlanningExplorer || http://online.lincoln.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 ||  || Lincolnshire County Council || Lincoln || searchable by date || http://apps1.lincolnshire.gov.uk/ePlanning/searchPageLoad.do ||
-||  || Liverpool City Council || Liverpool || planningexplorer || http://www.liverpool.gov.uk/environment/planning/mvm_explorer.asp ||
+||  || Liverpool City Council || Liverpool || PlanningExplorer || http://www.liverpool.gov.uk/environment/planning/mvm_explorer.asp ||
 || Ready  ||Luton Borough Council || Luton || PublicAccess ||  http://www.eplan.luton.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
