--- a/wiki/PlanningAuthoritiesA.wiki
+++ b/wiki/PlanningAuthoritiesA.wiki
@@ -6,9 +6,9 @@
 || Done || Allerdale || Allerdale Borough Council || ApplicationSearchServlet || http://planning.allerdale.gov.uk/portal/servlets/ApplicationSearchServlet || 
 || Done || Alnwick || Alnwick District Council || ApplicationSearchServlet || http://services.castlemorpeth.gov.uk:7777/portal/servlets/ApplicationSearchServlet ||
 || || *Amber Valley* || Amber Valley Borough Council || search facility with dates || http://www.ambervalley.gov.uk/services/environment/landandpremises/planningtownandcountry/planningapplications/PlanningApplicationRegister.htm ||
-|| Done || Angus || Angus Council || Public Access 7.3.1c || http://planning.angus.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
-|| Done || Argyll and Bute || Argyll and Bute Council || Public Access 7.3.1c || http://www.argyll-bute.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
+|| Done || Angus || Angus Council || PublicAccess || http://planning.angus.gov.uk/PublicAccess/tdc/tdc_home.aspx ||
+|| Done || Argyll and Bute || Argyll and Bute Council || PublicAccess || http://www.argyll-bute.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || || *Arun* || Arun District Council || weekly lists as ps file converted to html || http://www.arun.gov.uk/cgi-bin/buildpage.pl?mysql=448 ||
 || || *Ashfield* || Ashfield District Council || search facility including date || http://www.ashfield-dc.gov.uk/cfusion/planning/plan_findfile.cfm ||
 || || *Ashford* || Ashford Borough Council || Whole domain is timing out today... || http://www.ashford.gov.uk/planning/index.asp ||
-|| Done || Aylesbury Vale || Aylesbury Vale District Council || Public Access 7.3.1c || http://eplanning.aylesburyvaledc.gov.uk/dc/DcApplication/application_searchform.aspx ||
+|| Done || Aylesbury Vale || Aylesbury Vale District Council || PublicAccess || http://eplanning.aylesburyvaledc.gov.uk/dc/DcApplication/application_searchform.aspx ||
