--- a/wiki/PlanningAuthoritiesK.wiki
+++ b/wiki/PlanningAuthoritiesK.wiki
@@ -1,7 +1,7 @@
 ||  || Kennet District Council || Devizes || PlanningExplorer || http://mvm-planning.kennet.gov.uk/MVM/Online/PL/NotDecidedSearch.aspx ||
 ||  || Kensington & Chelsea Borough Council || London || weekly lists - looks like it could be related to acolnet || http://www.rbkc.gov.uk/Planning/scripts/weeklyform.asp || 
 ||  || Kent County Council || Maidstone || weekly lists as pdf || http://www.kent.gov.uk/publications/environment/weekly-planning-list.htm ||
-|| Done || Kerrier District Council || Camborne || The PublicAccess for Kerrier is down. There are also weekly lists as pdf|| ||http://www.kerrier.gov.uk/index.cfm?articleid=3766 ||
+|| Done || Kerrier District Council || Camborne || PublicAccess || || ||
 ||  || Kettering Borough Council || Kettering || weekly list, search facility without date || http://www.kettering.gov.uk/site/scripts/planning_list.php?weeklyList=true ||
 || Done || King's Lynn & West Norfolk Borough Council || King's Lynn || PublicAccess || http://online.west-norfolk.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || Kingston upon Hull City Council || Hull || PublicAccess || http://web.hullcc.gov.uk/publicaccess/tdc/DcApplication/application_searchform.aspx || 
