--- a/wiki/PlanningAuthoritiesD.wiki
+++ b/wiki/PlanningAuthoritiesD.wiki
@@ -4,7 +4,7 @@
 || || Dartmoor || Dartmoor National Park Authority || weekly and monthly lists in html || http://www.dartmoor-npa.gov.uk/index/planning/pl-devcontrol/pl-searchapplicationregister/application_register.htm ||
 || || Daventry || Daventry District Council || searchable by date ||  http://www.daventrydc.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || Done || Denbighshire || Denbighshire County Council|| ApplicationSearchServlet ||  http://planning.denbighshire.gov.uk/portal/servlets/ApplicationSearchServlet ||
-|| Done || Derby || Derby City Council || acolnetcgi ||  http://195.224.106.204/scripts/planningpages02/acolnetcgi.gov ||
+|| Done || Derby || Derby City Council || AcolNet ||  http://195.224.106.204/scripts/planningpages02/acolnetcgi.gov ||
 || || Derbyshire || Derbyshire County Council || only responsible for a small amount. all apps online ||  http://www.derbyshire.gov.uk/environment/planning/planning_applications/current_applications/ ||
 || || Derbyshire Dales || Derbyshire Dales District Council || weekly lists in html. appalling looking search page || http://www.doctec.co.uk/derbyshiredales/aspxpages/WeeklyLists.aspx ||
 || || Derwentside || Derwentside District Council || searchable by date received || http://www.derwentside.gov.uk/index.cfm?articleid=8427 ||
