Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesE.wiki
+++ b/wiki/PlanningAuthoritiesE.wiki
@@ -6,7 +6,7 @@
 || ready || East Dorset District Council || Wimborne Minster || PublicAccess || http://193.243.228.16/PublicAccess/tdc/tdc_home.aspx ||
 ||  || East Dunbartonshire Council || Glasgow || searchable by date || http://www.eastdunbarton.gov.uk/web%20site/live/edweblive.nsf/InternetMF?ReadForm&M=DEFAULTC=http://www.eastdunbarton.gov.uk/web%20site/live/edweblive.nsf/QuickLinkPagesWeb/Planning%20Apps?OpenDocument ||  || East Hampshire District Council || Petersfield || last week's apps || http://213.131.177.248/ehdc/planningapplicationsonline.nsf/LastWeek?OpenView&count=1000 ||
 ||  || East Hertfordshire District Council || Hertford || searchable by date || http://e-services.eastherts.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
-|| Ready || East Lindsey District Council || Louth || acolnet || http://www.e-lindsey.gov.uk/planning/AcolnetCGI.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
+|| Ready || East Lindsey District Council || Louth || AcolNet || http://www.e-lindsey.gov.uk/planning/AcolnetCGI.exe?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 ||  || East Lothian Council || Haddington || WAM - weekly lists|| http://www.planning.eastlothian.gov.uk/WAM/search/pas/index.htm ||
 ||  || East Northamptonshire Council || Thrapston || searchable by date || http://www.east-northantsonline.co.uk/planning/searchparam.asp ||
 ||  || East Renfrewshire Council || Glasgow || weekly lists as pdf || http://www.eastrenfrewshire.gov.uk/environment/planning/planning_applications/weekly_lists.htm ||
