--- a/wiki/PlanningAuthoritiesF.wiki
+++ b/wiki/PlanningAuthoritiesF.wiki
@@ -5,4 +5,4 @@
 ||  || Flintshire County Council || Mold || searchable by date || http://www.flintshire.gov.uk/webcont/fssplaps.nsf/$$search?openform ||
 ||  || Forest Heath District Council || Mildenhall || PlanningExplorer || http://195.171.177.73/MVM/Online/PL/GeneralSearch.aspx ||
 ||  || Forest of Dean District Council || Coleford || searchable by date || http://www.fdean.gov.uk/content.asp?nav=266&Parent_Directory_ID=200&ID=13265&HTMLID=Latest ||
-|| ready || Fylde Borough Council || Wesham || acolnet || http://www2.fylde.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
+|| ready || Fylde Borough Council || Wesham || AcolNet || http://www2.fylde.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeSearch ||
