Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesN.wiki
+++ b/wiki/PlanningAuthoritiesN.wiki
@@ -1,6 +1,6 @@
 ||  || Neath & Port Talbot County Council || Neath || weekly lists as pdf || http://www.neath-porttalbot.gov.uk/planning/dloads.cfm ||
-|| Ready || New Forest National Park Authority || Lyndhurst || Acolnet || http://web01.newforestnpa.gov.uk/planningpages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
-|| Ready || New Forest District Council || || Acolnet || http://web3.newforest.gov.uk/planningonline/acolnetcgi.gov ||
+|| Ready || New Forest National Park Authority || Lyndhurst || AcolNet || http://web01.newforestnpa.gov.uk/planningpages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
+|| Ready || New Forest District Council || || AcolNet || http://web3.newforest.gov.uk/planningonline/acolnetcgi.gov ||
 || || Newark & Sherwood District Council || Newark || eplanning, searchable by date|| http://www.nsdc.info/eplanning/default.aspx?sid=1&sindex=1&id=5 ||
 || Ready || Newcastle upon Tyne City Council || Newcastle upon Tyne || PublicAccess || ||
 || Ready || Newcastle-under-Lyme Borough Council || Newcastle-under-Lyme || PublicAccess || ||
@@ -13,7 +13,7 @@
 || || North Dorset District Council || Blandford Forum || weekly lists as pdf || http://www.north-dorset.gov.uk/index/living/building_planning/development_control/planning_applications-3/view_application.htm ||
 || Done || North East Derbyshire District Council || Chesterfield || PublicAccess || ||
 || || North East Lincolnshire Council || Cleethorpes || searchable by date ||http://sun11.nelincs.gov.uk/portal/page?_pageid=256,32885&_dad=portal&_schema=PORTAL  ||
-|| Ready || North Hertfordshire District Council || Letchworth || Acolnet || http://www.north-herts.gov.uk/dcdataonline/Pages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeSearch||
+|| Ready || North Hertfordshire District Council || Letchworth || AcolNet || http://www.north-herts.gov.uk/dcdataonline/Pages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeSearch||
 || || North Kesteven District Council || Sleaford || weekly lists as pdf || http://www.n-kesteven.gov.uk/section.asp?docId=3491 ||
 || || North Lanarkshire Council || Cumbernauld || list for the last week in html || http://www.northlan.gov.uk/business+and+employment/planning/planning+applications/weekly+list+of+planning+applications+week+ending+14th+may+2007.html ||
 || || North Lincolnshire || Scunthorpe || searchable by date || http://www.planning.northlincs.gov.uk/planet/ispforms.asp?ServiceKey=SysDoc-PlanetApplicationEnquiry ||
@@ -23,7 +23,7 @@
 || Done || North Tyneside || Newcastle Upon Tyne || PublicAccess || http://publicaccess.northtyneside.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
 || Done || North Warwickshire Borough Council || Atherstone || ApplicationSearchServlet|| http://planning.northwarks.gov.uk/portal/servlets/WeeklyListServlet ||
 || Ready || North West Leicestershire District Council || Coalville || PublicAccess || http://paccess.nwleics.gov.uk/PublicAccess/tdc/DcApplication/application_searchform.aspx ||
-|| Ready || North Wiltshire District Council || Chippenham || Acolnet || http://planning.northwilts.gov.uk/DCOnline/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
+|| Ready || North Wiltshire District Council || Chippenham || AcolNet || http://planning.northwilts.gov.uk/DCOnline/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
 || || North York Moors National Park Authority || York || weekly lists in html || http://www.moors.uk.net/content.php?nID=55 ||
 || || North Yorkshire County Council || Northallerton || searchable by date || http://212.140.128.182/Online%20Register/PlanAppSrch.asp ||
 || || Northampton Borough Council || Northampton || weekly lists in html - see also WNDC|| http://www.northamptonboroughcouncil.com/planning/defaultNBC.asp ||
